--- a/shop/templates/shop/thank-you.html
+++ b/shop/templates/shop/thank-you.html
@@ -1,7 +1,7 @@
 {% extends 'shop/base.html' %}
 {% load static %}
 {% block metatags %}
-<meta property="og:image" content="https://promotivno.com{% static 'icons/logo_meta_tag.webp' %}" />
+<meta property="og:image" content="https://promotivno.com{% static 'icons/logo_meta_tag.png' %}" />
 {% endblock metatags %}
 {% block content %}
 <div class="content-container thank-you">
