--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -12,7 +12,7 @@
 {% else %}
 <section id="header-banner" style="display: flex;align-items:center; justify-content: center; gap: 10px; align-items: center;" class="header-banner-for-product-page">
         <p id="header-banner-product-text">🔥 100% сигурно купување</p>
-        <p style="font-weight:500;text-align:center;font-size:15px;color:white" class="desktop">🚚 Бесплатна достава на сите производи</p>  
+        <p style="font-weight:500;text-align:center;font-size:15px;color:white" class="desktop">🚚 Бесплатна достава на купени 2 или повеќе производи!</p>
 </section>
 {% endif %}
 <header id="header">
