--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -287,7 +287,7 @@
                 </span>
                 <img src="{% static 'icons/arrow-down.svg' %}" alt="" style="width:16px;height:16px;" class="faq-icon"></div>
             <div class="faq-content">
-                <p style="padding:0px 10px 10px 10px;text-align:left;font-size:16px;">Сите наши производи имаат БЕСПЛАТНА ДОСТАВА до дома.</p>
+                <p style="padding:0px 10px 10px 10px;text-align:left;font-size:16px;">Цената на доставата е 99 денари. Доколку нарачате 2 или повеќе од 2 производи, достава е беслпатна!</p>
             </div>
         </div>
         <div class="faq-toggle">
