--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -2,17 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Promotivno - Macedonia">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <meta name="facebook-domain-verification" content="h2usro5nxhvyib48mq1rehoul0nf1o" />
-    
+    <meta name="facebook-domain-verification" content="h2usro5nxhvyib48mq1rehoul0nf1o"/>
+
     <meta property="og:type" content="Website">
     <meta property="og:site_name" content="Promotivno Macedonia">
     {% block metatags %}{% endblock metatags %}
-    
+
     {% if title %}
         <title>{{ title }} - Promotivno</title>
         <meta property="og:title" content="{{ title }} - Promotivno">
@@ -20,11 +20,13 @@
         <title>Почетна</title>
         <meta property="og:title" content="Почетна">
     {% endif %}
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href=" {% static 'shop/css/main.css' %} ">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href=" {% static 'shop/css/main_minified_v14.css' %} ">
+
     <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/webmanifest/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/icons/webmanifest/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/icons/webmanifest/favicon-16x16.png">
@@ -36,89 +38,105 @@
     <meta name="theme-color" content="#ffffff">
     <!-- Meta Pixel Code -->
     <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '201484344738499');
-    fbq('track', 'PageView');
+      !function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod ?
+            n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = '2.0';
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s)
+      }(window, document, 'script',
+        'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '201484344738499');
+      fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=201484344738499&ev=PageView&noscript=1"
+                   src="https://www.facebook.com/tr?id=201484344738499&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
     <script>
       window.OneSignal = window.OneSignal || [];
-      OneSignal.push(function() {
+      OneSignal.push(function () {
         OneSignal.init({
           appId: "d511d8fa-ab75-4ab8-bb9f-65bcc93bfd3c",
         });
       });
     </script>
-    
+
 </head>
 <body>
-    <!-- Messenger Chat Plugin Code -->
-    <div id="fb-root"></div>
+<!-- Messenger Chat Plugin Code -->
+<div id="fb-root"></div>
 
-    <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
+<!-- Your Chat Plugin code -->
+<div id="fb-customer-chat" class="fb-customerchat">
+</div>
 
-    <script>
-      var chatbox = document.getElementById('fb-customer-chat');
-      chatbox.setAttribute("page_id", "110068238444042");
-      chatbox.setAttribute("attribution", "biz_inbox");
-    </script>
+<script>
+  var chatbox = document.getElementById('fb-customer-chat');
+  chatbox.setAttribute("page_id", "110068238444042");
+  chatbox.setAttribute("attribution", "biz_inbox");
+</script>
 
-    <!-- Your SDK code -->
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          xfbml            : true,
-          version          : 'v16.0'
-        });
-      };
+<!-- Your SDK code -->
+<script>
+  window.fbAsyncInit = function () {
+    FB.init({
+      xfbml: true,
+      version: 'v16.0'
+    });
+  };
 
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
-    {% include "shop/includes/header.html" %} 
-    <nav id="navigation" style="z-index:1000000000!important">
-        <ul>
-            <li class="navigation-item"><a href="https://promotivno.com/" class="navigation-title">ПОЧЕТНА</a></li>
-            <li class="navigation-item"><a href="https://promotivno.com/product-category/najprodavani/" class="navigation-title">НАЈПРОДАВАНИ</a></li>
-            <li class="navigation-item"><a href="https://promotivno.com/product-category/domakjinstvo/" class="navigation-title">ДОМАЌИНСТВО</a></li>
-            <li class="navigation-item"><a href="https://promotivno.com/product-category/gradina/" class="navigation-title">ГРАДИНА</a></li>
-            <li class="navigation-item"><a href="https://promotivno.com/product-category/zdravje-i-ubavina/" class="navigation-title">ЗДРАВЈЕ И УБАВИНА</a></li>
-            <li class="navigation-item"><a href="https://promotivno.com/product-category/kujnski-aparati/" class="navigation-title">КУЈНСКИ АПАРАТИ</a></li>
-        </ul>
-    </nav>
-    <div class="page-container">
+  (function (d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s);
+    js.id = id;
+    js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+</script>
+{% include "shop/includes/header.html" %}
+<nav id="navigation" style="z-index:1000000000!important">
+    <ul>
+        <li class="navigation-item"><a href="https://promotivno.com/" class="navigation-title">ПОЧЕТНА</a></li>
+        <li class="navigation-item"><a href="https://promotivno.com/product-category/najprodavani/"
+                                       class="navigation-title">НАЈПРОДАВАНИ</a></li>
+        <li class="navigation-item"><a href="https://promotivno.com/product-category/domakjinstvo/"
+                                       class="navigation-title">ДОМАЌИНСТВО</a></li>
+        <li class="navigation-item"><a href="https://promotivno.com/product-category/gradina/" class="navigation-title">ГРАДИНА</a>
+        </li>
+        <li class="navigation-item"><a href="https://promotivno.com/product-category/zdravje-i-ubavina/"
+                                       class="navigation-title">ЗДРАВЈЕ И УБАВИНА</a></li>
+        <li class="navigation-item"><a href="https://promotivno.com/product-category/kujnski-aparati/"
+                                       class="navigation-title">КУЈНСКИ АПАРАТИ</a></li>
+    </ul>
+</nav>
+<div class="page-container">
     {% block content %}{% endblock content %}
-    
+
     <div class="lightbox">
         <form action="{% url 'search_results' %}" method="get" class="mobile disabled">
-        <span class="close-search">&#10006;</span>
-        <input type="text" name="q"  placeholder="Пребарај ги сите производи" class="mobile-search">
+            <span class="close-search">&#10006;</span>
+            <input type="text" name="q" placeholder="Пребарај ги сите производи" class="mobile-search">
         </form>
     </div>
-        
-    </div>
-    </div>
-    {% include "shop/includes/footer.html" %}
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script src="{%  static 'shop/js/main_minified_v10.js' %}"></script>
-    {% block scripts%}{% endblock scripts %}
+
+</div>
+</div>
+{% include "shop/includes/footer.html" %}
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+<script src="{% static 'shop/js/main_minified_v10.js' %}"></script>
+{% block scripts %}{% endblock scripts %}
 </body>
 </html>
