--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -4027,7 +4027,6 @@ section#ordered_items_notice_wrapper {
     }
 }
 
-
 .tns-outer {
     padding: 0 !important
 }
@@ -4041,15 +4040,25 @@ section#ordered_items_notice_wrapper {
 }
 
 .tns-slider {
-    -webkit-transition: all 0s;
-    -moz-transition: all 0s;
     transition: all 0s
 }
 
 .tns-slider > .tns-item {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box
+}
+
+.productGallery__ThumbnailImage {
+    border-radius: 0.5rem;
+    transition: all 0.2s ease-in-out;
+}
+
+.productGallery__ThumbnailImage:hover {
+    cursor: pointer;
+    opacity: 0.5;
+}
+
+.tns-slider > .tns-item:first-of-type {
+    display: block;
 }
 
 .tns-horizontal.tns-subpixel {
@@ -4081,6 +4090,57 @@ section#ordered_items_notice_wrapper {
     left: 0
 }
 
+.tns-controls {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10;
+}
+
+.tns-controls button {
+    position: absolute;
+    color: white;
+    background: none;
+    border: none;
+    padding: 8px;
+}
+
+.tns-controls button[data-controls="prev"] {
+    left: 0;
+}
+
+.tns-controls button[data-controls="next"] {
+    right: 0;
+}
+
+.tns-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    gap: 6px;
+    width: 100%;
+    bottom: 16px;
+}
+
+.tns-nav button {
+    width: 8px;
+    height: 8px;
+    border: none;
+    cursor: pointer;
+    background: #000;
+    opacity: 0.4;
+    border-radius: 100%;
+}
+
+.tns-nav .tns-nav-active {
+    opacity: 1;
+}
+
 .tns-gallery {
     position: relative;
     left: 0;
@@ -4090,8 +4150,6 @@ section#ordered_items_notice_wrapper {
 .tns-gallery > .tns-item {
     position: absolute;
     left: -100%;
-    -webkit-transition: transform 0s, opacity 0s;
-    -moz-transition: transform 0s, opacity 0s;
     transition: transform 0s, opacity 0s
 }
 
@@ -4101,8 +4159,6 @@ section#ordered_items_notice_wrapper {
 }
 
 .tns-gallery > .tns-moving {
-    -webkit-transition: all 0.25s;
-    -moz-transition: all 0.25s;
     transition: all 0.25s
 }
 
@@ -4111,8 +4167,6 @@ section#ordered_items_notice_wrapper {
 }
 
 .tns-lazy-img {
-    -webkit-transition: opacity 0.6s;
-    -moz-transition: opacity 0.6s;
     transition: opacity 0.6s;
     opacity: 0.6
 }
@@ -4122,8 +4176,6 @@ section#ordered_items_notice_wrapper {
 }
 
 .tns-ah {
-    -webkit-transition: height 0s;
-    -moz-transition: height 0s;
     transition: height 0s
 }
 
@@ -4171,8 +4223,6 @@ section#ordered_items_notice_wrapper {
 
 .tns-t-ct {
     width: 2333.3333333%;
-    width: -webkit-calc(100% * 70 / 3);
-    width: -moz-calc(100% * 70 / 3);
     width: calc(100% * 70 / 3);
     position: absolute;
     right: 0
@@ -4186,48 +4236,9 @@ section#ordered_items_notice_wrapper {
 
 .tns-t-ct > div {
     width: 1.4285714%;
-    width: -webkit-calc(100% / 70);
-    width: -moz-calc(100% / 70);
     width: calc(100% / 70);
     height: 10px;
     float: left
-}
-
-.productGallery__ThumbnailImage {
-    border-radius: 0.5rem;
-    transition: all 0.2s ease-in-out;
-}
-
-.productGallery__ThumbnailImage:hover {
-    cursor: pointer;
-    opacity: 0.5;
-}
-
-.tns-controls {
-    position: absolute;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 10;
-}
-
-.tns-controls button {
-    position: absolute;
-    color: white;
-    padding: 8px;
-    background: none;
-    border: none;
-}
-
-.tns-controls button[data-controls="prev"] {
-    left: 0;
-}
-
-.tns-controls button[data-controls="next"] {
-    right: 0;
 }
 
 #productGallery__Thumbnails {
