--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href=" {% static 'shop/css/main_minified_v15.css' %} ">
+    <link rel="stylesheet" type="text/css" href=" {% static 'shop/css/main_v1.css' %} ">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/webmanifest/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/icons/webmanifest/favicon-32x32.png">
