--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -282,15 +282,15 @@
         {% endif %}
         <div class="badges-wrapper">
             <div class="badge-item">
-                <img src="{% static 'icons/delivery-badge.svg' %}" alt="" class="badge" width="50" height="50">
+                <img src="{% static 'icons/delivery-badge-1.svg' %}" alt="" class="badge" width="50" height="50">
                 <p class="badge-text">2-4 дена достава</p>
             </div>
             <div class="badge-item">
-                <img src="{% static 'icons/exchange-badge.svg' %}" alt="" class="badge" width="50" height="50">
+                <img src="{% static 'icons/exchange-badge-1.svg' %}" alt="" class="badge" width="50" height="50">
                 <p class="badge-text">15 дена рок на замена</p>
             </div>
             <div class="badge-item">
-                <img src="{% static 'icons/refundation-badge.svg' %}" alt="" class="badge" width="50" height="50">
+                <img src="{% static 'icons/refundation-badge-1.svg' %}" alt="" class="badge" width="50" height="50">
                 <p class="badge-text">рефундација</p>
             </div>
         </div>
