--- a/shop/templates/shop/thank-you.html
+++ b/shop/templates/shop/thank-you.html
@@ -1,121 +1,122 @@
 {% extends 'shop/base.html' %}
 {% load static %}
 {% block metatags %}
-<meta property="og:image" content="https://promotivno.com{% static 'icons/logo_meta_tag.png' %}" />
+    <meta property="og:image" content="https://promotivno.com{% static 'icons/logo_meta_tag.png' %}"/>
 {% endblock metatags %}
 {% block content %}
-<div class="content-container thank-you">
-    <div class="thank-you-icon">
-    <i class="fas fa-check-circle"></i>
-    <h2 class="thank-you-heading">Направивте вистински избор.</h2>
-    <p class="thank-you-message">Ви благодариме за нарачката <span style="text-transform: capitalize;">{{ name }}</span> 😊</p>
-    </div>
-   
-    <div class="order-info">
-        <div class="order-info-item">
-            <p class="order-info-title">ДАТА:</p>
-            <p class="order-info-content">{{ order.created_at }}</p>
+    <div class="content-container thank-you">
+        <div class="thank-you-icon">
+            <i class="fas fa-check-circle"></i>
+            <h2 class="thank-you-heading">Направивте вистински избор.</h2>
+            <p class="thank-you-message">Ви благодариме за нарачката <span
+                    style="text-transform: capitalize;">{{ name }}</span> 😊</p>
         </div>
-        <div class="order-info-item">
-            <p class="order-info-title">ВКУПНО:</p>
-            <p class="order-info-content">{{ order.total_price }}</p>
-        </div>
-        <div class="order-info-item">
-            <p class="order-info-title">ПЛАЌАЊЕ:</p>
-            <p class="order-info-content">Плаќање при достава</p>
-        </div>
-    </div>
-    {% if offerproduct %}
-        <div class="thank-you-offer">
-            {% csrf_token %}
-            <input type="hidden" value="" name="offer_ordered_product_id" id="offer_ordered_product_id">
-            <h5>специјална понуда само денес</h3>
-            <h3 style="padding-top:6px">ЗА ВТОР КУПЕН ПРОИЗВОД 20% ПОПУСТ</h5>
-            <div class="offer-box">
-            <p class="offer-timer" style="font-weight: 600;">ПОНУДАТА ИСТЕКУВА ЗА <br><span id="timer" style="font-size: 24px">03:00</span></p>
-            <input type="hidden" class="order_id" value="{{ order.id }}">
-            <input type="hidden" class="prod_id" value="{{ offerproduct.product.id }}">
-            <picture>
-                <source src="{{ offerproduct.product.thumbnail }}" type="image/webp">
-                <img src="{{ offerproduct.product.thumbnail_as_jpeg.url }}" alt="" width="250" height="250">
-            </picture>
-            {% if offerproduct.attribute_name  %}
-            <p class="offer-ttl">{{ offerproduct.product.title }} - {{offerproduct.attribute_name}}</p>
-            <p class="rgl_price">{{ offerproduct.product.sale_price }} ден</p>
-            <p class="sl_price">{{ offerproduct.attribute_price }} ден</p>
-            <p class="offer-save">ДОПОЛНИТЕЛНИ 20% ЗАШТЕДА</p>
-            <div class="quantity product_data" style="margin-bottom:10px!important">
-                <button class="decrement-btn offerbox">-</button>
-                <input type="text" name="quantity" class="qty-input" value="1" aria-label="Количина"> 
-                <button class="increment-btn offerbox">+</button>
+
+        <div class="order-info">
+            <div class="order-info-item">
+                <p class="order-info-title">ДАТА:</p>
+                <p class="order-info-content">{{ order.created_at }}</p>
             </div>
-            <button class="offer-button">НАРАЧАЈ</button>
-            {% else %}
-            <p class="offer-ttl">{{ offerproduct.product.title }}</p>
-            <p class="rgl_price">{{ offerproduct.product.sale_price }} ден</p>
-            <p class="sl_price">{{ offerproduct.price }} ден</p>
-            <p class="offer-save">ДОПОЛНИТЕЛНИ 20% ЗАШТЕДА</p>
-            <div class="quantity product_data" style="margin-bottom:10px!important">
-                <button class="decrement-btn offerbox">-</button>
-                <input type="text" name="quantity" class="qty-input" value="1" aria-label="Количина"> 
-                <button class="increment-btn offerbox">+</button>
+            <div class="order-info-item">
+                <p class="order-info-title">ВКУПНО:</p>
+                <p class="order-info-content">{{ order.total_price }}</p>
             </div>
-            <button class="offer-button">НАРАЧАЈ</button>
-            {% endif %}
-            </div class="offer-box">
-            <p class="notice">Горенаведениот производ доколку нарачате ќе ви биде доставен со истата нарачка</p>
+            <div class="order-info-item">
+                <p class="order-info-title">ПЛАЌАЊЕ:</p>
+                <p class="order-info-content">Плаќање при достава</p>
+            </div>
         </div>
-    {% endif %}
-    
-    <p class="thank-you-info">ТВОЈАТА НАРАЧКА</p>
-    <div id="thank-you-order-review">
-        <table class="order-review-table cart-data thank-you-table">
-            <thead>
+        {#    {% if offerproduct %}#}
+        {#        <div class="thank-you-offer">#}
+        {#            {% csrf_token %}#}
+        {#            <input type="hidden" value="" name="offer_ordered_product_id" id="offer_ordered_product_id">#}
+        {#            <h5>специјална понуда само денес</h3>#}
+        {#            <h3 style="padding-top:6px">ЗА ВТОР КУПЕН ПРОИЗВОД 20% ПОПУСТ</h5>#}
+        {#            <div class="offer-box">#}
+        {#            <p class="offer-timer" style="font-weight: 600;">ПОНУДАТА ИСТЕКУВА ЗА <br><span id="timer" style="font-size: 24px">03:00</span></p>#}
+        {#            <input type="hidden" class="order_id" value="{{ order.id }}">#}
+        {#            <input type="hidden" class="prod_id" value="{{ offerproduct.product.id }}">#}
+        {#            <picture>#}
+        {#                <source src="{{ offerproduct.product.thumbnail }}" type="image/webp">#}
+        {#                <img src="{{ offerproduct.product.thumbnail_as_jpeg.url }}" alt="" width="250" height="250">#}
+        {#            </picture>#}
+        {#            {% if offerproduct.attribute_name  %}#}
+        {#            <p class="offer-ttl">{{ offerproduct.product.title }} - {{offerproduct.attribute_name}}</p>#}
+        {#            <p class="rgl_price">{{ offerproduct.product.sale_price }} ден</p>#}
+        {#            <p class="sl_price">{{ offerproduct.attribute_price }} ден</p>#}
+        {#            <p class="offer-save">ДОПОЛНИТЕЛНИ 20% ЗАШТЕДА</p>#}
+        {#            <div class="quantity product_data" style="margin-bottom:10px!important">#}
+        {#                <button class="decrement-btn offerbox">-</button>#}
+        {#                <input type="text" name="quantity" class="qty-input" value="1" aria-label="Количина"> #}
+        {#                <button class="increment-btn offerbox">+</button>#}
+        {#            </div>#}
+        {#            <button class="offer-button">НАРАЧАЈ</button>#}
+        {#            {% else %}#}
+        {#            <p class="offer-ttl">{{ offerproduct.product.title }}</p>#}
+        {#            <p class="rgl_price">{{ offerproduct.product.sale_price }} ден</p>#}
+        {#            <p class="sl_price">{{ offerproduct.price }} ден</p>#}
+        {#            <p class="offer-save">ДОПОЛНИТЕЛНИ 20% ЗАШТЕДА</p>#}
+        {#            <div class="quantity product_data" style="margin-bottom:10px!important">#}
+        {#                <button class="decrement-btn offerbox">-</button>#}
+        {#                <input type="text" name="quantity" class="qty-input" value="1" aria-label="Количина"> #}
+        {#                <button class="increment-btn offerbox">+</button>#}
+        {#            </div>#}
+        {#            <button class="offer-button">НАРАЧАЈ</button>#}
+        {#            {% endif %}#}
+        {#            </div class="offer-box">#}
+        {#            <p class="notice">Горенаведениот производ доколку нарачате ќе ви биде доставен со истата нарачка</p>#}
+        {#        </div>#}
+        {#    {% endif %}#}
+
+        <p class="thank-you-info">ТВОЈАТА НАРАЧКА</p>
+        <div id="thank-you-order-review">
+            <table class="order-review-table cart-data thank-you-table">
+                <thead>
                 <tr>
                     <td>Продукт</td>
                     <td>Цена</td>
-            </thead>
-            <tbody >
-            {% for item in orderItems %}
-            <tr class="cart-item-row">
-                <td class="cart-item product_data" style="padding: 9px 12px;">
-                    <input type="hidden" class="prod_id" value="{{ item.product_id }}">
-                    {% csrf_token %}
-                    {% if item.upsell_thumbnail %}
-                        <img src="{{ item.upsell_thumbnail }}" alt="" width="45" height="45">
-                    {% else %}
-                    
-                        <picture>
-                            <source src="{{ item.product.thumbnail_loop.url }}" type="image/webp">
-                            <img src="{{ item.product.thumbnail_loop_as_jpeg.url }}" alt="" width="45" height="45">
-                        </picture>
+                </thead>
+                <tbody>
+                {% for item in orderItems %}
+                    <tr class="cart-item-row">
+                        <td class="cart-item product_data" style="padding: 9px 12px;">
+                            <input type="hidden" class="prod_id" value="{{ item.product_id }}">
+                            {% csrf_token %}
+                            {% if item.upsell_thumbnail %}
+                                <img src="{{ item.upsell_thumbnail }}" alt="" width="45" height="45">
+                            {% else %}
 
-                    {% endif %}
-                    {% if item.attribute_name %}
-                    <p class="item-name">{{ item.product.title }} - {{item.attribute_name}}</p>
-                    {% else %}
-                        {% if item.item_name %}
-                            <p class="item-name">{{ item.item_name }}</p>
-                        {% else %}
-                            <p class="item-name">{{ item.product.title }}</p>
-                        {% endif %}
-                    {% endif %}
-                    <strong class="product-quantity">x {{ item.quantity }}</strong>
-                </td>
-                
-                    
-                
-                <td class="cart-item-total-row">
-                    <p class="item-total">{{ item.price }} ден</p>
+                                <picture>
+                                    <source src="{{ item.product.thumbnail_loop.url }}" type="image/webp">
+                                    <img src="{{ item.product.thumbnail_loop_as_jpeg.url }}" alt="" width="45"
+                                         height="45">
+                                </picture>
 
-                </td>
-            </tr>
-            {% endfor %}
-            </tbody>
-            <tfoot>
+                            {% endif %}
+                            {% if item.attribute_name %}
+                                <p class="item-name">{{ item.product.title }} - {{ item.attribute_name }}</p>
+                            {% else %}
+                                {% if item.item_name %}
+                                    <p class="item-name">{{ item.item_name }}</p>
+                                {% else %}
+                                    <p class="item-name">{{ item.product.title }}</p>
+                                {% endif %}
+                            {% endif %}
+                            <strong class="product-quantity">x {{ item.quantity }}</strong>
+                        </td>
+
+
+                        <td class="cart-item-total-row">
+                            <p class="item-total">{{ item.price }} ден</p>
+
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+                <tfoot>
                 {% if orderFees %}
-                        {% for fee in orderFees %}
-                        <tr class="cart-fees"> 
+                    {% for fee in orderFees %}
+                        <tr class="cart-fees">
                             <td>
                                 <p>{{ fee.title }}</p>
                             </td>
@@ -123,14 +124,14 @@
                                 <p>{{ fee.price }} ден</p>
                             </td>
                         </tr>
-                        {% endfor %}
-                    {% endif %}
-                <tr class="cart-subtotal"> 
+                    {% endfor %}
+                {% endif %}
+                <tr class="cart-subtotal">
                     <td>
                         <p>Цена</p>
                     </td>
                     <td>
-                        <p>{{order.subtotal_price}} ден</p>
+                        <p>{{ order.subtotal_price }} ден</p>
                     </td>
                 </tr>
                 <tr class="cart-shipping">
@@ -139,9 +140,9 @@
                     </td>
                     <td>
                         {% if order.shipping == True %}
-                        <p class="cart-shipping-method">До врата - 150ден</p>
+                            <p class="cart-shipping-method">До врата - 150ден</p>
                         {% else %}
-                        <p class="cart-shipping-method">Бесплатна достава</p>
+                            <p class="cart-shipping-method">Бесплатна достава</p>
                         {% endif %}
                     </td>
                 </tr>
@@ -153,39 +154,39 @@
                         <p>{{ order.total_price }} ден</p>
                     </td>
                 </tr>
-            </tfoot>
-            
-        </table>
+                </tfoot>
+
+            </table>
+        </div>
+
+
+        <p class="thank-you-info">ОСТАВЕНИ ПОДАТОЦИ ЗА ДОСТАВА</p>
+        <p class="thank-you-message">{{ order.name }}</p>
+        <p class="thank-you-message">{{ order.address }}</p>
+        <p class="thank-you-message">{{ order.city }}</p>
+        <p class="thank-you-message">{{ order.number }}</p>
+        <p class="thank-you-message thankumessage-last">(доколку сакате да ја измените вашата нарачка или сакате да
+            промените некои од вашите податоци за достава ве молиме контактирајте не на 071/321-314)</p>
+        <a href="{% url 'shop-home' %}" class="thankyou-proceed-to-home">ПРОДОЛЖИ СО КУПУВАЊЕ</a>
     </div>
-
-
-
-
-    <p class="thank-you-info">ОСТАВЕНИ ПОДАТОЦИ ЗА ДОСТАВА</p>
-    <p class="thank-you-message">{{ order.name }}</p>
-    <p class="thank-you-message">{{ order.address }}</p>
-    <p class="thank-you-message">{{ order.city }}</p>
-    <p class="thank-you-message">{{ order.number }}</p>
-    <p class="thank-you-message thankumessage-last">(доколку сакате да ја измените вашата нарачка или сакате да промените некои од вашите податоци за достава ве молиме контактирајте не на 071/321-314)</p>
-    <a href="{% url 'shop-home' %}" class="thankyou-proceed-to-home">ПРОДОЛЖИ СО КУПУВАЊЕ</a>
-</div>
 {% endblock content %}
 
 {% block scripts %}
-<script>
-    var timerDisplay = document.getElementById("timer");
-    var timerDuration = 180;
-    var timerInterval = setInterval(updateTimer, 1000);
-    function updateTimer() {
+    <script>
+      var timerDisplay = document.getElementById("timer");
+      var timerDuration = 180;
+      var timerInterval = setInterval(updateTimer, 1000);
+
+      function updateTimer() {
         var minutes = Math.floor(timerDuration / 60);
         var seconds = timerDuration % 60;
         var displayString = minutes.toString().padStart(2, '0') + ":" + seconds.toString().padStart(2, '0');
         timerDisplay.textContent = displayString;
         if (timerDuration <= 0) {
-            clearInterval(timerInterval);
-            timerDisplay.textContent = "00:00";
+          clearInterval(timerInterval);
+          timerDisplay.textContent = "00:00";
         }
         timerDuration--;
-    }
-</script>
+      }
+    </script>
 {% endblock scripts %}
