--- a/shop/templates/shop/policies/dostava.html
+++ b/shop/templates/shop/policies/dostava.html
@@ -1,24 +1,35 @@
 {% extends "shop/base.html" %}
-    {% block content %}
-        <div class="content-container">
-            <div class="politika-page">
-                <h1 class="politika-name">Достава</h1>
-                <p class="politika-point"><strong>1.1 Која курирска служба ја испорачува стоката?</strong></p>
-                <p class="politika-description">Promotivno соработува со курирската служба ELS и сите пакети се испраќаат преку ELS.</p>
-                <p class="politika-point"><strong>1.2 Време на испорака?</strong></p>
-                <p class="politika-description">По вашата успешна нарачка, ние ќе го испратиме пакетот истиот или следниот работен ден (освен ако не се договориме поинаку со вас) Времето за достава по испораката е 2-5 работни дена</p>
-                <p class="politika-point"><strong>1.3 Цена за испорака?</strong></p>
-                <p class="politika-description">Со повеќето прикажани продукти на нашата веб страница нудиме бесплатна достава, а во случај на нарачкана продукт без понуда бесплатна достава, ќе ви биде пресметано во кошничка при правење на нарачката и ќе ви биде наплатена поштарина од 150 денари при подигање на нарачката.</p>
-                <p class="politika-point"><strong>1.4 Кога доставата е бесплатна?</strong></p>
-                <p class="politika-description">Доколку нарачате продукт со понуда бесплатна достава, доставата е бесплатна.</p>
-                <p class="politika-point"><strong>1.5 Кои се начините на плаќање?</strong></p>
-                <p class="politika-description">Можете да платите со готовина при подигање на нарачката.</p>
-                <p class="politika-point"><strong>1.6 Што ако пакувањето или продуктот се оштети при транспорт?</strong></p>
-                <p class="politika-description">Доколку пакувањето е видливо оштетено при подигање, потребно е да го пријавите на курирот кој ви ја доставува пратката и да направите записник на лице место. Ако забележите оштетување само по отпакување на пакетот, треба веднаш да не контактирате и нашиот тим ќе ве води низ чекорите на замена (видете во политика за замена) Ако жалбата е оправдана, можете да изберете дали сакате нов продукт или рефундација.</p>
-            </div>
+{% block content %}
+    <div class="content-container">
+        <div class="politika-page">
+            <h1 class="politika-name">Достава</h1>
+            <p class="politika-point"><strong>1.1 Која курирска служба ја испорачува стоката?</strong></p>
+            <p class="politika-description">Promotivno соработува со курирската служба ELS и сите пакети се испраќаат
+                преку ELS.</p>
+            <p class="politika-point"><strong>1.2 Време на испорака?</strong></p>
+            <p class="politika-description">По вашата успешна нарачка, ние ќе го испратиме пакетот истиот или следниот
+                работен ден (освен ако не се договориме поинаку со вас) Времето за достава по испораката е 2-5 работни
+                дена</p>
+            <p class="politika-point"><strong>1.3 Цена за испорака?</strong></p>
+            <p class="politika-description">Со повеќето прикажани продукти на нашата веб страница нудиме бесплатна
+                достава, а во случај на нарачкана продукт без понуда бесплатна достава, ќе ви биде пресметано во
+                кошничка при правење на нарачката и ќе ви биде наплатена поштарина од 170 денари при подигање на
+                нарачката.</p>
+            <p class="politika-point"><strong>1.4 Кога доставата е бесплатна?</strong></p>
+            <p class="politika-description">Доколку нарачате продукт со понуда бесплатна достава, доставата е
+                бесплатна.</p>
+            <p class="politika-point"><strong>1.5 Кои се начините на плаќање?</strong></p>
+            <p class="politika-description">Можете да платите со готовина при подигање на нарачката.</p>
+            <p class="politika-point"><strong>1.6 Што ако пакувањето или продуктот се оштети при транспорт?</strong></p>
+            <p class="politika-description">Доколку пакувањето е видливо оштетено при подигање, потребно е да го
+                пријавите на курирот кој ви ја доставува пратката и да направите записник на лице место. Ако забележите
+                оштетување само по отпакување на пакетот, треба веднаш да не контактирате и нашиот тим ќе ве води низ
+                чекорите на замена (видете во политика за замена) Ако жалбата е оправдана, можете да изберете дали
+                сакате нов продукт или рефундација.</p>
         </div>
-        </div>
-    {% endblock content %}
+    </div>
+    </div>
+{% endblock content %}
 
 
 
