--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -172,7 +172,7 @@
                     <div class="form-icon-holder">
                         <img src="{% static 'icons/checkout/city.svg' %}" alt="" style="width: 24px; height:24px">
                     </div>
-                    <input type="text" required name="city" placeholder="Одберете град" class="checksout-city">
+                    <input type="text" required name="city" placeholder="Внесете го вашиот град" class="checksout-city">
                     {#                    <div class="dropdownsearch">#}
                     {#                        <div class="options">#}
                     {#                            <select name="" id="dynamic_select">#}
