--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -59,7 +59,8 @@
             </div>
         </div>
     </header>
-    {#<section class="header-info"><p style="padding: 0px 2px;">Почитувани поради новогодишните празници вашите нарачки или рекламации направени помеѓу 30.12 - 07.01 ќе бидат процесирани и испратени на 08.01. Ви посакуваме убави празници!</p></section>#}
+    <section class="header-info"><p style="padding: 0px 2px;">Нарачките направени помеѓу 29ти Дек. - 7ми Јан. ќе бидат
+        испорачани од 8ми Јан. - 15ти Јан. Среќни празници!</p></section>
     <div id="sidecart">
         <div class="cart-close">
             <span id="close-cart">&#10006</span>
