--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -139,7 +139,7 @@
 </div>
 {% include "shop/includes/footer.html" %}
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-<script src="{% static 'shop/js/main_minified_v12' %}"></script>
+<script src="{% static 'shop/js/main_minified_v12.js' %}"></script>
 {% block scripts %}{% endblock scripts %}
 </body>
 </html>
