--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -123,6 +123,8 @@
                                        class="navigation-title">ЗДРАВЈЕ И УБАВИНА</a></li>
         <li class="navigation-item"><a href="https://promotivno.com/product-category/kujnski-aparati/"
                                        class="navigation-title">КУЈНСКИ АПАРАТИ</a></li>
+        <li class="navigation-item"><a href="https://promotivno.com/product-category/avtomobil/"
+                                       class="navigation-title">АВТОМОБИЛ</a></li>
     </ul>
 </nav>
 <div class="page-container">
