--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -59,8 +59,8 @@
             </div>
         </div>
     </header>
-    <section class="header-info"><p style="padding: 0px 2px;">Нарачките направени помеѓу 29ти Дек. - 7ми Јан. ќе бидат
-        испорачани од 8ми Јан. - 15ти Јан. Среќни празници!</p></section>
+{#    <section class="header-info"><p style="padding: 0px 2px;">Нарачките направени помеѓу 29ти Дек. - 7ми Јан. ќе бидат#}
+{#        испорачани од 8ми Јан. - 15ти Јан. Среќни празници!</p></section>#}
     <div id="sidecart">
         <div class="cart-close">
             <span id="close-cart">&#10006</span>
