--- a/analytics/templates/analytics/create_new_ad.html
+++ b/analytics/templates/analytics/create_new_ad.html
@@ -406,7 +406,7 @@ select:not(.form-select) {
                       <h5 class="card-title" id="product-card-title">#</h5>
                     </div>
                     <ul class="list-group list-group-flush">
-                      <li class="list-group-item"><span style="font-size:14px; text-decoration: line-through; font-weight:500; color:#7A7A7A" id="product-card-before-price">3920</span> ден <span style="font-size:20px;color:#32CD32;font-weight:500" id="product-card-price">123</span> ден</li>
+                      <li class="list-group-item"><span style="font-size:14px; text-decoration: line-through; font-weight:500; color:#7A7A7A" id="product-card-before-price">3920</span> ден <span style="font-size:20px;color:#FB770D;font-weight:500" id="product-card-price">123</span> ден</li>
                       <li class="list-group-item" id="product_card_label">#</li>
                     </ul>
                     <div class="card-body">
