--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -5,17 +5,17 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Promotivno - Macedonia">
+    <meta name="description" content="ExtraPopust - Macedonia">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta name="facebook-domain-verification" content="h2usro5nxhvyib48mq1rehoul0nf1o"/>
 
     <meta property="og:type" content="Website">
-    <meta property="og:site_name" content="Promotivno Macedonia">
+    <meta property="og:site_name" content="ExtraPopust Macedonia">
     {% block metatags %}{% endblock metatags %}
 
     {% if title %}
-        <title>{{ title }} - Promotivno</title>
-        <meta property="og:title" content="{{ title }} - Promotivno">
+        <title>{{ title }} - ExtraPopust</title>
+        <meta property="og:title" content="{{ title }} - ExtraPopust">
     {% else %}
         <title>Почетна</title>
         <meta property="og:title" content="Почетна">
@@ -112,18 +112,18 @@
 {% include "shop/includes/header.html" %}
 <nav id="navigation" style="z-index:1000000000!important">
     <ul>
-        <li class="navigation-item"><a href="https://promotivno.com/" class="navigation-title">ПОЧЕТНА</a></li>
-        <li class="navigation-item"><a href="https://promotivno.com/product-category/najprodavani/"
+        <li class="navigation-item"><a href="https://extrapopust.com/" class="navigation-title">ПОЧЕТНА</a></li>
+        <li class="navigation-item"><a href="https://extrapopust.com/product-category/najprodavani/"
                                        class="navigation-title">НАЈПРОДАВАНИ</a></li>
-        <li class="navigation-item"><a href="https://promotivno.com/product-category/domakjinstvo/"
+        <li class="navigation-item"><a href="https://extrapopust.com/product-category/domakjinstvo/"
                                        class="navigation-title">ДОМАЌИНСТВО</a></li>
-        <li class="navigation-item"><a href="https://promotivno.com/product-category/gradina/" class="navigation-title">ГРАДИНА</a>
+        <li class="navigation-item"><a href="https://extrapopust.com/product-category/gradina/" class="navigation-title">ГРАДИНА</a>
         </li>
-        <li class="navigation-item"><a href="https://promotivno.com/product-category/zdravje-i-ubavina/"
+        <li class="navigation-item"><a href="https://extrapopust.com/product-category/zdravje-i-ubavina/"
                                        class="navigation-title">ЗДРАВЈЕ И УБАВИНА</a></li>
-        <li class="navigation-item"><a href="https://promotivno.com/product-category/kujnski-aparati/"
+        <li class="navigation-item"><a href="https://extrapopust.com/product-category/kujnski-aparati/"
                                        class="navigation-title">КУЈНСКИ АПАРАТИ</a></li>
-        <li class="navigation-item"><a href="https://promotivno.com/product-category/avtomobil/"
+        <li class="navigation-item"><a href="https://extrapopust.com/product-category/avtomobil/"
                                        class="navigation-title">АВТОМОБИЛ</a></li>
     </ul>
 </nav>
