--- a/shop/templates/shop/category.html
+++ b/shop/templates/shop/category.html
@@ -1,6 +1,6 @@
 {% extends "shop/base.html" %}
 {% block metatags %}
-<meta property="og:image" content="https://promotivno.com{% static 'icons/logo_meta_tag.png' %}" />
+<meta property="og:image" content="https://extrapopust.com{% static 'icons/logo_meta_tag.png' %}" />
 {% endblock metatags %}
 {% block content %}
     <div class="content-container">
