--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% load static %}
 {% block metatags %}
-<meta property="og:image" content="https://promotivno.com{% static 'icons/logo_meta_tag.png' %}" />
+<meta property="og:image" content="https://extrapopust.com{% static 'icons/logo_meta_tag.png' %}" />
 {% endblock metatags %}
 {% block content %}
 <style>body #fb-root{display:none!important}#footer,.footer-section{display:none}.red{border-color:red}#ordered_items_notice_wrapper{visibility:hidden}</style>
