--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -258,7 +258,7 @@
                                     <div class="upsell-price">
                                         <p>
                                             <span style="text-decoration: line-through;font-size: 12px;color: #abaeb4;font-weight:600;">{{ item.product.regular_price }} ден</span>
-                                            <span style="font-size: 14px;color: #32CD32;font-weight:600;">{{ item.price }} ден</span>
+                                            <span style="font-size: 14px;color: #FB770D;font-weight:600;">{{ item.price }} ден</span>
                                         </p>
                                     </div>
                                     <p class="checkoutOffer-text"
@@ -300,7 +300,7 @@
                             style="font-size:22px">{{ fee.emoji }}</span></div>
                 {% endif %}
                 <p>Додади <span style="color:red;font-weight:700">{{ fee.title }}</span> за само <span
-                        style="font-weight:700; color:#32CD32">{{ fee.price }} ден</span></p>
+                        style="font-weight:700; color:#FB770D">{{ fee.price }} ден</span></p>
 
                 </div>
                 {% endfor %}
@@ -345,9 +345,9 @@
         </div>
         <div class="footer-item ">
             <h3>Контакт</h3>
-            <a href="mailto:contact@promotivno.com" aria-label="Контакт mail"><img
+            <a href="mailto:contact@extrapopust.com" aria-label="Контакт mail"><img
                     src="{% static 'icons/envelope.svg' %}" alt="" class="image-icon top-icon filter-white" width="16"
-                    height="16">contact@promotivno.com</a>
+                    height="16">contact@extrapopust.com</a>
         </div>
         <div class="footer-item">
             <h3>Полиси</h3>
@@ -361,10 +361,10 @@
         </div>
         <hr class="horizontal-line">
         <div class="footer-social-icons">
-            <a href="https://www.facebook.com/promotivno.com" aria-label="Facebook"><img
+            <a href="https://www.facebook.com/extrapopust.com" aria-label="Facebook"><img
                     src="{% static 'icons/facebook.svg' %}" alt="" class="image-icon filter-white" width="24"
                     height="24"></a>
-            <a href="https://www.instagram.com/promotivno.com/" aria-label="Instagram"><img
+            <a href="https://www.instagram.com/extrapopust.com/" aria-label="Instagram"><img
                     src="{% static 'icons/instagram.svg' %}" alt="" class="image-icon filter-white" width="24"
                     height="24"></a>
         </div>
@@ -374,6 +374,6 @@
     <div class="footer-inner">
         <p>*Сликите се симболични и не ги гарантираат карактеристиките на предметите. Цените може да подлежат на промена
             без претходна најава. Сите прикажани цени се со пресметан ДДВ.</p>
-        <h4>Copyright {% now 'Y' %} © Сите права припаѓаат на Promotivno</h4>
+        <h4>Copyright {% now 'Y' %} © Сите права припаѓаат на ExtraPopust</h4>
     </div>
 </section>
