--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -4,11 +4,11 @@
     {% if not product %}
         <section id="header-banner">
             <div class="banner-inner-header-1" style="display: flex;align-items:center;justify-content:center ">
-                <a href="mailto:contact@promotivno.com" class="banner-text">contact@promotivno.com</a>
-                <a href="https://www.facebook.com/promotivno.com" aria-label="Facebook"><img
+                <a href="mailto:contact@extrapopust.com" class="banner-text">contact@extrapopust.com</a>
+                <a href="https://www.facebook.com/extrapopust.com" aria-label="Facebook"><img
                         src="{% static 'icons/facebook.svg' %}" class="image-icon filter-white" alt="" width="16"
                         height="16"></a>
-                <a href="https://www.instagram.com/promotivno.com" aria-label="Instagram"><img
+                <a href="https://www.instagram.com/extrapopust.com" aria-label="Instagram"><img
                         src="{% static 'icons/instagram.svg' %}" class="image-icon filter-white" alt="" width="16"
                         height="16"></a>
             </div>
@@ -27,7 +27,7 @@
 
             <div class="header-logo-container">
                 <a href="{% url 'shop-home' %}" class="header-logo-link" aria-label="Почетна">
-                    <img src="{% static 'icons/header-logo.png' %}" alt="default.jpg" class="header-logo-img"
+                    <img src="{% static 'icons/logo_white_256x.avif' %}" alt="default.jpg" class="header-logo-img"
                          width="200">
                 </a>
             </div>
