--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -1,7 +1,7 @@
 {% extends 'shop/base.html' %}
 {% load static %}
 {% block metatags %}
-    <meta property="og:image" content="https://promotivno.com{{ product.thumbnail.url }}"/>
+    <meta property="og:image" content="https://extrapopust.com{{ product.thumbnail.url }}"/>
 {% endblock metatags %}
 {% block content %}
     <style>#overlay-loader {
@@ -114,7 +114,7 @@
             {% if product.free_shipping == True %}
                 <p class="free-shipping">бесплатна достава</p>
             {% endif %}
-            <p class="delivery-calculator"><span style="color:#32CD32;font-weight:600">Нарачај веднаш</span> и добиј
+            <p class="delivery-calculator"><span style="color:#FB770D;font-weight:600">Нарачај веднаш</span> и добиј
                 измеѓу <br class="mobile"><span class="delivery-day">{{ delivery_days.0 }}</span> и <span
                         class="delivery-day">{{ delivery_days.1 }}</span></p>
         </div>
@@ -144,7 +144,7 @@
                             <div class="product-page-upsell-info">
                                 <p style="font-weight:600">{{ upsell.title }}</p>
                                 <p><span
-                                        style="font-size:14px;font-weight:600;color: #32CD32;">вклучен со продуктот</span>
+                                        style="font-size:14px;font-weight:600;color: #FB770D;">вклучен со продуктот</span>
                                 </p>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                                 <p style="font-weight:600">{{ upsell.title }}</p>
                                 <p><span
                                         style="font-size:12px;font-weight:500;color:#808080;text-decoration: line-through;">{{ upsell.regular_price }} ден</span>
-                                    <span style="font-size:14px;font-weight:600;color: #32CD32;">{{ upsell.sale_price }} ден</span>
+                                    <span style="font-size:14px;font-weight:600;color: #FB770D;">{{ upsell.sale_price }} ден</span>
                                 </p>
                             </div>
                         </div>
@@ -382,8 +382,8 @@
                     <p style="padding:0px 10px 10px 10px;text-align:left;font-size:16px;">Доколку не сте задоволни од
                         производот можете да побарате рефундација или да го замените производот со некој друг што го
                         имаме на залиха моментално. Се што треба е да не контактирате на <a
-                                href="mailto:contact@promotivno.com"
-                                style="display:inline-block; color:#00703d;font-weight:500;">contact@promotivno.com</a>
+                                href="mailto:contact@extrapopust.com"
+                                style="display:inline-block; color:#00703d;font-weight:500;">contact@extrapopust.com</a>
                         и веднаш ќе добиете некој од нашите колеги кој ќе ви помогне да се реши проблемот.</p>
                 </div>
             </div>
