--- a/shop/templates/shop/shopmanager/shopmanager_base.html
+++ b/shop/templates/shop/shopmanager/shopmanager_base.html
@@ -9,7 +9,7 @@
     {% if heading %}
     <title>{{heading}} - ShopManager</title>
     {% else %}
-    <title>ShopManager - Promotivno</title>
+    <title>ShopManager - ExtraPopust</title>
     {% endif %}
     <link rel="stylesheet" href="{% static 'shop/css/shopmanager.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
