--- a/shop/static/shop/css/main_v4.css
+++ b/shop/static/shop/css/main_v4.css
@@ -1,8 +1,8 @@
 
 :root {
-    --brand-primary: #0A192F;
+    --brand-primary: #25424c;
     --black: #0f0f0f;
-    --brand-action: #32CD32;
+    --brand-action: #FB770D;
     --regular-price: #808080;
     --footer-gray: #2b2b2b;
 }
@@ -1786,7 +1786,7 @@ select {
 }
 
 .slick-next::before {
-    background: url(https://promotivno.com/static/icons/chevron-right.svg) no-repeat;
+    background: url(https://extrapopust.com/static/icons/chevron-right.svg) no-repeat;
     content: "";
     display: block;
     height: 20px;
@@ -1794,7 +1794,7 @@ select {
 }
 
 .slick-prev::before {
-    background: url(https://promotivno.com/static/icons/chevron-left.svg) no-repeat;
+    background: url(https://extrapopust.com/static/icons/chevron-left.svg) no-repeat;
     content: "";
     display: block;
     height: 20px;
