chore: Add phone to footer's contact

--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -345,6 +345,9 @@
         </div>
         <div class="footer-item ">
             <h3>Контакт</h3>
+            <a href="tel:+38971321314" aria-label="Контакт mail"><img
+                    src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16"
+                    height="16">071321314</a>
             <a href="mailto:contact@promotivno.com" aria-label="Контакт mail"><img
                     src="{% static 'icons/envelope.svg' %}" alt="" class="image-icon top-icon filter-white" width="16"
                     height="16">contact@promotivno.com</a>
