--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -345,7 +345,7 @@
         </div>
         <div class="footer-item ">
             <h3>Контакт</h3>
-            <a href="mailto:contact@extrapopust.com" aria-label="Контакт mail"><img
+            <a href="tel:+38979350737" aria-label="Контакт mail"><img
                     src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16"
                     height="16">079350737</a>
             <a href="mailto:contact@extrapopust.com" aria-label="Контакт mail"><img
